@@ -4,7 +4,8 @@
 	* applet.[ch]: Hook the mute button into the system. Do some prep
 	work to separate the applet object into a model and a
 	viewer/control so the dock can also be a viewer/control on an
-	equal footing. This will make some code a lot cleaner.
+	equal footing. This will make some code a lot cleaner. Also hook
+	up the new "Volume Control..." button.
 
 2008-11-27  Callum McKenzie  <callum@spooky-possum.org>
 
